[B]1.0.7[/B]
- os, kodi, addon verziószám írása a logba
[B]1.0.6[/B]
- Felirat bugFix (Windows)
[B]1.0.5[/B]
- Felirat könyvtárkezelés bugFix
[B]1.0.4[/B]
- Felirat letöltés megvalósítása
[B]1.0.3[/B]
- keresés bugFix
[B]1.0.2[/B]
- m3u8 linkek lejátszása inputstream adaptive használatával
[B]1.0.1[/B]
- Előtöltés, felesleges részek kiszedése by vargalex
[B]1.0.0[/B]
- Első verzió