@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.filmezek" name="Filmezek" version="1.0.7" provider-name="heg, vargalex">
+<addon id="plugin.video.filmezek" name="Filmezek" version="1.0.8" provider-name="heg, vargalex">
 	<requires>
 		<import addon="script.module.beautifulsoup4" version="4.6.2"/>
 		<import addon="script.module.requests" version="2.22.0"/>
@@ -16,6 +16,7 @@
 		<language>hu</language>
 		<platform>all</platform>
 		<news> 
+			1.0.8 - os verzió kiszedése
 			1.0.7 - os, kodi, addon verziószám írása a logba
 			1.0.6 - Felirat bugFix (Windows)
 			1.0.5 - Felirat könyvtárkezelés bugFix
